clusters/saradomin/apps/media/buildarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildarr
  labels:
    app.kubernetes.io/name: buildarr
    app.kubernetes.io/part-of: arr-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: buildarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: buildarr
        app.kubernetes.io/part-of: arr-stack
    spec:
      automountServiceAccountToken: false
      containers:
        - name: buildarr
          image: callum027/buildarr:latest
          args:
            - daemon
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          projected:
            defaultMode: 0400
            sources:
              - configMap:
                  name: buildarr-config
                  items:
                    - key: buildarr.yml
                      path: buildarr.yml
              - secret:
                  name: arr-api-keys
                  items:
                    - key: buildarr-secret.yml
                      path: buildarr-secret.yml
